force-app/main/default/objects/Hill_Rom_Application__c/Hill_Rom_Application__c.object-meta.xml
<CustomObject>
    <description>Applications for Application Portfolio Management.</description>
    <label>Hill-Rom Application</label>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hill-Rom Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>