force-app/main/default/objects/Hill_Rom_Application__c/fields/App_Type__c.field-meta.xml
<CustomField>
    <fullName>App_Type__c</fullName>
    <label>App Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Application Module</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>