force-app/main/default/objects/Hill_Rom_Application__c/fields/Application_Robustness__c.field-meta.xml
<CustomField>
    <fullName>Application_Robustness__c</fullName>
    <inlineHelpText>5 (Best)  Robust and scalable. Handles change and growth
4 (Better) Good stability. Few disruptions
3 (Average) Acceptably stable. Few issues 
2 (Below Average)  Weak, some deficiencies in robustness, scalability
1 (Worst) Unstable and deteriorating</inlineHelpText>
    <label>Application Robustness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <color>#009900</color>
                <label>5</label>
            </value>
            <value>
                <fullName>4</fullName>
                <color>#66FF99</color>
                <label>4</label>
            </value>
            <value>
                <fullName>3</fullName>
                <color>#FFFF66</color>
                <label>3</label>
            </value>
            <value>
                <fullName>2</fullName>
                <color>#FF9900</color>
                <label>2</label>
            </value>
            <value>
                <fullName>1</fullName>
                <color>#FF0000</color>
                <label>1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>