force-app/main/default/objects/Hill_Rom_Application__c/fields/Application_Scored__c.field-meta.xml
<CustomField>
    <fullName>Application_Scored__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created as part of Change Request CR00031072</description>
    <label>Application Scored</label>
    <type>Checkbox</type>
</CustomField>