force-app/main/default/objects/Hill_Rom_Application__c/fields/Architectural_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Architectural_Alignment__c</fullName>
    <inlineHelpText>5 (Best) Fully aligned with current architecture
4 (Better) Compatible with current or recent architecture
3 (Average) Partially aligned
2 (Below Average) Non-compliant, but acceptable deviations
1 (Worst) Non-compliant, unacceptable deviations</inlineHelpText>
    <label>Architectural Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>