force-app/main/default/objects/Hill_Rom_Application__c/fields/AV_F_Score__c.field-meta.xml
<CustomField>
    <fullName>AV_F_Score__c</fullName>
    <description>Score for Application Value &amp; Fit to Mission or Process.</description>
    <formula>VALUE(TEXT(Application_Robustness__c))+ VALUE(TEXT(Data_Information_Quality_Timeliness__c))+ VALUE(TEXT(Future_Role_of_Application__c))+ VALUE(TEXT(Mission_or_Process_Fit__c))+ VALUE(TEXT(Utilization__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Score for Application Value &amp; Fit to Mission or Process.</inlineHelpText>
    <label>AV&amp;F Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>