force-app/main/default/objects/Hill_Rom_Application__c/fields/Availability_and_Cost_of_Support_Skills__c.field-meta.xml
<CustomField>
    <fullName>Availability_and_Cost_of_Support_Skills__c</fullName>
    <inlineHelpText>5 (Best) All indicators are positive
4 (Better) Availability or cost are better than average
3 (Average) Average availability and cost
2 (Below Average)  Availability or cost is high
1 (Worst) Poor availability and high cost</inlineHelpText>
    <label>Availability and Cost of Support Skills</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>