force-app/main/default/objects/Hill_Rom_Application__c/fields/Base_Technology_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Base_Technology_Alignment__c</fullName>
    <inlineHelpText>5 (Best) Mainstream or trending toward mainstream
4 (Better) Significant internal support, vendor support available
3 (Average) Technologies best supported by vendor
2 (Below Average) Technologies will be unsupported
1 (Worst) Technologies unsupported</inlineHelpText>
    <label>Base Technology Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>