force-app/main/default/objects/Hill_Rom_Application__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>if this application aligns with only one Brand, which brand?</description>
    <inlineHelpText>if this application aligns with only one Brand, which brand?</inlineHelpText>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>GBU__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Brand</valueSetName>
    </valueSet>
</CustomField>