force-app/main/default/objects/Hill_Rom_Application__c/fields/CMDB_App_Name__c.field-meta.xml
<CustomField>
    <fullName>CMDB_App_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CMDB App Name</label>
    <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
    <relationshipLabel>Hill-Rom Applications</relationshipLabel>
    <relationshipName>Hill_Rom_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>