force-app/main/default/objects/Hill_Rom_Application__c/fields/Complexity__c.field-meta.xml
<CustomField>
    <fullName>Complexity__c</fullName>
    <inlineHelpText>5 (Best) Complexity very low. Easier to maintain
4 (Better) Complexity low. Easy to maintain
3 (Average) Complexity high. Acceptable to maintain
2 (Below Average) Complex. Difficulty to maintain
1 (Worst) Complexity very high. Difficult to maintain</inlineHelpText>
    <label>Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>