force-app/main/default/objects/Hill_Rom_Application__c/fields/Cost_Score__c.field-meta.xml
<CustomField>
    <fullName>Cost_Score__c</fullName>
    <description>Score for Cost</description>
    <formula>VALUE(TEXT(License_Support_Contract_Cost__c))+ VALUE(TEXT(Service_Maintenance_Enhancement_Costs__c))+ VALUE(TEXT(Total_Application_Lifecycle_Cost__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Score for Cost</inlineHelpText>
    <label>Cost Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>