force-app/main/default/objects/Hill_Rom_Application__c/fields/Data_Information_Quality_Timeliness__c.field-meta.xml
<CustomField>
    <fullName>Data_Information_Quality_Timeliness__c</fullName>
    <inlineHelpText>5 (Best)  Timely, high quality data and information
4 (Better) Good quality and timeliness
3 (Average) Acceptable, some issues
2 (Below Average)  Weak, deficiencies in quality or timeliness
1 (Worst) Poor quality, timeliness, deficiencies</inlineHelpText>
    <label>Data &amp; Information Quality &amp; Timeliness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>