force-app/main/default/objects/Hill_Rom_Application__c/fields/EAO_IT_Lead__c.field-meta.xml
<CustomField>
    <fullName>EAO_IT_Lead__c</fullName>
    <description>EAO Application Lead</description>
    <inlineHelpText>EAO Application Lead</inlineHelpText>
    <label>EAO IT Lead</label>
    <length>50</length>
    <type>Text</type>
</CustomField>