force-app/main/default/objects/Hill_Rom_Application__c/fields/End_of_Life_Date__c.field-meta.xml
<CustomField>
    <fullName>End_of_Life_Date__c</fullName>
    <label>End of Life Date</label>
    <type>Date</type>
</CustomField>