force-app/main/default/objects/Hill_Rom_Application__c/fields/Estimated_Infrastructure__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Infrastructure__c</fullName>
    <label>Estimated Infrastructure Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>