force-app/main/default/objects/Hill_Rom_Application__c/fields/Extensibility_and_Scaleability__c.field-meta.xml
<CustomField>
    <fullName>Extensibility_and_Scaleability__c</fullName>
    <inlineHelpText>5 (Best) Broadly extensible and scalable 
4 (Better) Significant areas for extension or scaling
3 (Average) Adaptive in the most frequent change
2 (Below Average) Application is difficult to extend or scale
1 (Worst) Application cannot extend or scale</inlineHelpText>
    <label>Extensibility and Scaleability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>