force-app/main/default/objects/Hill_Rom_Application__c/fields/Future_Role_of_Application__c.field-meta.xml
<CustomField>
    <fullName>Future_Role_of_Application__c</fullName>
    <inlineHelpText>5 (Best) Strategic, increasing importance
4 (Better) Strategic to some functions, future role variable
3 (Average) Tactical, stable role
2 (Below Average) Tactical, declining role
1 (Worst) Tactical, contained to current uses, planned retirement</inlineHelpText>
    <label>Future Role of Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>