force-app/main/default/objects/Hill_Rom_Application__c/fields/GBU__c.field-meta.xml
<CustomField>
    <fullName>GBU__c</fullName>
    <description>Which global business unit does this application align to?</description>
    <inlineHelpText>Which global business unit does this application align to?</inlineHelpText>
    <label>GBU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>PSS</fullName>
            </value>
            <value>
                <fullName>GSS</fullName>
            </value>
            <value>
                <fullName>FLC</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>