force-app/main/default/objects/Hill_Rom_Application__c/fields/Hosting__c.field-meta.xml
<CustomField>
    <fullName>Hosting__c</fullName>
    <description>If this is hosted by someone else, select Cloud. If this is hosted by a Hill-Rom supported data center, then this is considered On Premise.</description>
    <inlineHelpText>If this is hosted by someone else, select Cloud. If this is hosted by a Hill-Rom supported data center, then this is considered On Premise.</inlineHelpText>
    <label>Hosting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>On Premise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>