force-app/main/default/objects/Hill_Rom_Application__c/fields/Infrastructure_Supported_By__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Supported_By__c</fullName>
    <formula>CMDB_App_Name__r.Infr_Supported_By__c</formula>
    <label>Infrastructure Supported By</label>
    <type>Text</type>
</CustomField>