force-app/main/default/objects/Hill_Rom_Application__c/fields/IT_BRM__c.field-meta.xml
<CustomField>
    <fullName>IT_BRM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Relationship Manager (IT)</description>
    <inlineHelpText>Business Relationship Manager (IT)</inlineHelpText>
    <label>IT BRM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hill_Rom_Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>