force-app/main/default/objects/Hill_Rom_Application__c/fields/License_Support_Contract_Cost__c.field-meta.xml
<CustomField>
    <fullName>License_Support_Contract_Cost__c</fullName>
    <inlineHelpText>5 (Best) Good utilization, declining costs, good SL
4 (Better) Stable, manageable costs and SL
3 (Average) Excess capacity or increasing costs SL issues
2 (Below Average) Extended support only, SL issues
1 (Worst) Out of support</inlineHelpText>
    <label>License &amp; Support Contract Cost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>