force-app/main/default/objects/Hill_Rom_Application__c/fields/License_Support_Contract_Cost_dollar__c.field-meta.xml
<CustomField>
    <fullName>License_Support_Contract_Cost_dollar__c</fullName>
    <label>License &amp; Support Contract Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>