force-app/main/default/objects/Hill_Rom_Application__c/fields/Maintenance_Change_Factors__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Change_Factors__c</fullName>
    <inlineHelpText>5 (Best)  Stable. Low risk of large extensions
4 (Better) Predictable. Occasional large changes
3 (Average) Average number of risky extensions
2 (Below Average)  Higher than average risky extensions
1 (Worst) High rate of large and disruptive changes</inlineHelpText>
    <label>Maintenance Change Factors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>