force-app/main/default/objects/Hill_Rom_Application__c/fields/Mission_or_Process_Fit__c.field-meta.xml
<CustomField>
    <fullName>Mission_or_Process_Fit__c</fullName>
    <inlineHelpText>5 (Best)  Strong fit to and support of business needs
4 (Better) Good Fit and support of needs
3 (Average) Acceptable, Some misalignment or gaps
2 (Below Average)  Weak, deficiencies, support of needs
1 (Worst) Poor alignment, significant deficiencies</inlineHelpText>
    <label>Mission or Process Fit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>