force-app/main/default/objects/Hill_Rom_Application__c/fields/OR_Score__c.field-meta.xml
<CustomField>
    <fullName>OR_Score__c</fullName>
    <description>Score for Operation and Risk</description>
    <formula>VALUE(TEXT(Complexity__c))+ VALUE(TEXT(Reliance_on_Subject_Matter_Expert__c))+ VALUE(TEXT(Maintenance_Change_Factors__c))+ VALUE(TEXT(Supportability__c))+ VALUE(TEXT(Availability_and_Cost_of_Support_Skills__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Score for Operation and Risk</inlineHelpText>
    <label>OR Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>