force-app/main/default/objects/Hill_Rom_Application__c/fields/Parent_Application__c.field-meta.xml
<CustomField>
    <fullName>Parent_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Application</label>
    <referenceTo>Hill_Rom_Application__c</referenceTo>
    <relationshipLabel>Child Applications</relationshipLabel>
    <relationshipName>Parent_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>