force-app/main/default/objects/Hill_Rom_Application__c/fields/Primary_Business_Area__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business_Area__c</fullName>
    <label>Primary Business Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>Corporate Development</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Finance_Accounting</fullName>
                <label>Finance/Accounting</label>
            </value>
            <value>
                <fullName>Global Construction</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Manufacturing_Production</fullName>
                <label>Manufacturing/Production</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Purchasing_Sourcing</fullName>
                <label>Purchasing/Sourcing</label>
            </value>
            <value>
                <fullName>R&amp;D</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>