force-app/main/default/objects/Hill_Rom_Application__c/fields/Primary_IT_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Primary_IT_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>primary assigned analyst</description>
    <label>Primary IT Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hill_Rom_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>