force-app/main/default/objects/Hill_Rom_Application__c/fields/Process_Classification_Framework__c.field-meta.xml
<CustomField>
    <fullName>Process_Classification_Framework__c</fullName>
    <defaultValue>&quot;https://myhillrom.sharepoint.com/sites/enterprisearchitectureportfoliomanagementteam/Shared%20Documents/Application%20Portfolio%20Mgmt/Life_Sciences_v705_vs_Life_Sciences_v610.xlsx?d=w69bf0f88c6d145a3847c88b403498334&quot;</defaultValue>
    <label>Process Classification Framework</label>
    <type>Url</type>
</CustomField>