force-app/main/default/objects/Hill_Rom_Application__c/fields/Regulatory_Privacy_Impact__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Privacy_Impact__c</fullName>
    <label>Regulatory/Privacy Impact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PHI</fullName>
            </value>
            <value>
                <fullName>PII</fullName>
            </value>
            <value>
                <fullName>EU PII</fullName>
            </value>
            <value>
                <fullName>PCI-DSS</fullName>
            </value>
            <value>
                <fullName>SOX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>