force-app/main/default/objects/Hill_Rom_Application__c/fields/Reliance_on_Subject_Matter_Expert__c.field-meta.xml
<CustomField>
    <fullName>Reliance_on_Subject_Matter_Expert__c</fullName>
    <inlineHelpText>5 (Best) Good pool of skilled staff. Well-documented app
4 (Better) Staff sufficient. External supply of skills
3 (Average) Current subject matter staff adequate
2 (Below Average)  Inadequate support staff
1 (Worst) Inadequate support staff, no skills</inlineHelpText>
    <label>Reliance on Subject Matter Expert</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>