force-app/main/default/objects/Hill_Rom_Application__c/fields/Remedyforce_Queue__c.field-meta.xml
<CustomField>
    <fullName>Remedyforce_Queue__c</fullName>
    <description>Supported by queue name</description>
    <formula>CMDB_App_Name__r.Supported_By__c</formula>
    <inlineHelpText>Supported by queue name</inlineHelpText>
    <label>Remedyforce Queue</label>
    <type>Text</type>
</CustomField>