force-app/main/default/objects/Hill_Rom_Application__c/fields/Service_Maintenance_Enhancement_Costs__c.field-meta.xml
<CustomField>
    <fullName>Service_Maintenance_Enhancement_Costs__c</fullName>
    <inlineHelpText>5 (Best) Low, predictable
4 (Better) Below average, trending down
3 (Average) Average, stable
2 (Below Average) Higher than average, increasing 
1 (Worst) High, increasing, unpredictable</inlineHelpText>
    <label>Service Maintenance &amp; Enhancement Costs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>