force-app/main/default/objects/Hill_Rom_Application__c/fields/ServiceMaintenanceEnhancementCostsdollar__c.field-meta.xml
<CustomField>
    <fullName>ServiceMaintenanceEnhancementCostsdollar__c</fullName>
    <label>Service Maintenance &amp; Enhancement Costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>