force-app/main/default/objects/Hill_Rom_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Invest</fullName>
            </value>
            <value>
                <fullName>Tolerate</fullName>
                <default>true</default>
                <label>Tolerate</label>
            </value>
            <value>
                <fullName>Migrate</fullName>
            </value>
            <value>
                <fullName>Eliminate</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>