force-app/main/default/objects/Hill_Rom_Application__c/fields/Supportability__c.field-meta.xml
<CustomField>
    <fullName>Supportability__c</fullName>
    <inlineHelpText>5 (Best) Can be supported efficiently
4 (Better) Better than average support
3 (Average) Average supportability
2 (Below Average) Unpredictable or less than average supportability 
1 (Worst) Difficult to support</inlineHelpText>
    <label>Supportability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>