force-app/main/default/objects/Hill_Rom_Application__c/fields/Technical_Execution__c.field-meta.xml
<CustomField>
    <fullName>Technical_Execution__c</fullName>
    <inlineHelpText>5 (Best) No issues of execution or efficiency
4 (Better) Intermittent issues of execution or efficiency
3 (Average) Controllable deviations in execution or efficiency
2 (Below Average) Issues require remediation
1 (Worst) Significant issues</inlineHelpText>
    <label>Technical Execution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>