force-app/main/default/objects/Hill_Rom_Application__c/fields/Total_Application_Lifecycle_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Application_Lifecycle_Cost__c</fullName>
    <inlineHelpText>5 (Best) Lowest cost solution, Strategic platform
4 (Better) Lower than average costs
3 (Average) Average costs
2 (Below Average)  Higher than average costs
1 (Worst) Highest cost solution</inlineHelpText>
    <label>Total Application Lifecycle Cost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>