force-app/main/default/objects/Hill_Rom_Application__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>License_Support_Contract_Cost_dollar__c + ServiceMaintenanceEnhancementCostsdollar__c + TotalApplicationLifecycleCostdollar__c + Estimated_Infrastructure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Estimated Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>