force-app/main/default/objects/Hill_Rom_Application__c/fields/TotalApplicationLifecycleCostdollar__c.field-meta.xml
<CustomField>
    <fullName>TotalApplicationLifecycleCostdollar__c</fullName>
    <label>Total Application Lifecycle Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>