force-app/main/default/objects/Hill_Rom_Application__c/fields/TR_Score__c.field-meta.xml
<CustomField>
    <fullName>TR_Score__c</fullName>
    <description>Score for Technical Risk</description>
    <formula>VALUE(TEXT(Architectural_Alignment__c))+ VALUE(TEXT(Base_Technology_Alignment__c))+ VALUE(TEXT(Extensibility_and_Scaleability__c))+ VALUE(TEXT(Technical_Execution__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Score for Technical Risk</inlineHelpText>
    <label>TR Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>