force-app/main/default/objects/Hill_Rom_Application__c/fields/Utilization__c.field-meta.xml
<CustomField>
    <fullName>Utilization__c</fullName>
    <inlineHelpText>5 (Best) Usage is high
4 (Better) Usage is above average
3 (Average) Average Usage
2 (Below Average) Below average Usage
1 (Worst) Low Usage</inlineHelpText>
    <label>Utilization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>