force-app/main/default/objects/Hill_Rom_Application__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Hill_Rom_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>